--- a/app/assets/stylesheets/furniture/all_pages.scss
+++ b/app/assets/stylesheets/furniture/all_pages.scss
@@ -28,9 +28,38 @@ html{
 	}
 }
 
-html, body {
-	height: 100%;
+/**
+ * CSSReset.com - How To Keep Footer At Bottom of Page with CSS
+ * 
+ * Original Tutorial: http://www.cssreset.com/2010/css-tutorials/how-to-keep-footer-at-bottom-of-page-with-css/
+ * License: Free - do whatever you like with it! Credit and linkbacks much appreciated.
+ *
+ * NB: Make sure the value for 'padding-bottom' on #content is equal to or greater than the height of #footer.
+ */
+
+html,body {
+	margin:0;
+	padding:0;
+	height:100%;
 }
+
+.container {
+	min-height:100%;
+	position:relative;
+}
+
+.body {
+	padding-bottom:100px; /* Height of the footer element */
+}
+
+.footer {
+	width:100%;
+	height:100px;
+	position:absolute;
+	bottom:0;
+	left:0;
+}
+
 
 .body{
 	padding-top: $header-height;
@@ -43,17 +72,24 @@ html, body {
 	margin: 0 auto;
 
 	color: $electric-blue;
-
-	padding-top: 25px;
-	padding-right: 50px;
-	padding-bottom: 25px;
-	padding-left: 50px;
+	padding-bottom: 10px;
 
 	.page-title {
 		font-family: $roboto-slab;
 		font-size: 30px;
 		text-align: center;
 		font-weight: bold;
+		height: 40px;
+		line-height: 40px;
+		padding: 10px;
+		padding-bottom: 5px;
+
+	}
+
+	.page-subtitle{
+		text-align: center;
+		padding-top: 5px;
+		padding-bottom: 5px;
 	}
 
 }
